--- a/assets/less/responsive.less
+++ b/assets/less/responsive.less
@@ -105,7 +105,7 @@
 			display: block;
 			margin: 0;
 			position: absolute;
-			right: 5%;
+			right: 10px;
 			top: 50px;
 
 			#mobile-navigation, 
